linuxmuster-linbo7 (4.1.36-0) lmn72; urgency=low

  * Update kernel to 6.5.3 (a3ad8b7).
  * Fix #101: images with a qcow2-size of ca 52 GB and bigger cannot be
    distributed via torrent because of an invalid metainfo file. (30d83f8).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 18 Sep 2023 18:33:00 +0200

linuxmuster-linbo7 (4.1.35-0) lmn72; urgency=low

  * linbo-configure.sh: refactor dropbear ssh key creation (7b62add).
  * rsync-post-upload.sh: remove last remnants of opsi (1868db1).
  * fix providing rtl8168 firmware (312cc3d).
  * add r8168 patches (0dc0d45).
  * refactor r8168 build (e768b1a).
  * update kernel to 6.4.12 (dba4f3e).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 25 Aug 2023 14:09:00 +0200

linuxmuster-linbo7 (4.1.34-0) lmn72; urgency=low

  * Update kernel to 6.4.7 (4a2b48a).
  * Fix typo in kernel build run script (3a06c81).
  * Fix #100: dropbear ssh keys not generated when making an fresh install of 7.2 (no upgrade).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 30 Jul 2023 17:10:00 +0200

linuxmuster-linbo7 (4.1.33-0) lmn72; urgency=low

  * Force pulling r8168 source code on kernel update (08b0b5a).
  * Fix CurrentControlSet with regpatcher (c288909).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 26 Jul 2023 14:20:00 +0200

linuxmuster-linbo7 (4.1.32-0) lmn72; urgency=low

  * Update kernel to 6.4.5 (e049c01).
  * Removed correction of registry key paths from regpatcher (bf571a5).
  * Improved function validmac in helperfunctions (3e3e4ad).
  * Fix rsync service's write permissions to /etc (cdd2ea6).
  * Added i2c drivers (#96, 442ec03).
  * Merge pull request #98 from netzint/update-zeroing-pv (5dab3c7).
  * Revert 5b23751 (bbeff5f).
  * Moved linbofs build script to last position (71ae29b).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 24 Jul 2023 22:08:00 +0200

linuxmuster-linbo7 (4.1.31-0) lmn72; urgency=low

  * Update kernel to 6.4.2 (3e2e303).