@@ -1,16 +1,0 @@
-# firmware related environment variables
-#
-# thomas@linuxmuster.net
-# 20230826
-#
-
-# git url
-FWNAME="linux-firmware"
-FWURL="https://git.kernel.org/pub/scm/linux/kernel/git/firmware/$FWNAME.git"
-
-# build directories
-FWSRCDIR="$SRC/$FWNAME"
-FWTMPDIR="$KMODTMPDIR/lib/firmware"
-
-# list of firmware files to be installed
-FWLIST="rtl_nic"
