@@ -1,22 +1,0 @@
-#!/bin/bash
-#
-# thomas@linuxmuster.net
-# 20230826
-#
-
-# read build environment
-for i in build/conf.d/*; do source "$i" || exit 1; done
-
-# download/update linux-firmware
-if [ -d "$FWSRCDIR/.git" ]; then
-    cd "$FWSRCDIR"
-    git pull || exit 1
-else
-    rm -rf "$FWSRCDIR"
-    cd "$SRC"
-    git clone "$FWURL" || exit 1
-fi
-
-# install firmware
-mkdir -p "$FWTMPDIR"
-for i in $FWLIST; do cp -rv "$FWSRCDIR/$i" "$FWTMPDIR" || exit 1; done
